# lazyrss

./: .gitignore  .gitmodules  Cargo.toml  LICENCE  README.md
src/: action.rs  app.rs  config.rs  db.rs  db_async.rs  event.rs  feed.rs  lib.rs  main.rs  render.rs
src/ui/: article_pane.rs  articles_pane.rs  feeds_pane.rs  mod.rs  popup.rs  status_bar.rs  theme.rs
