[package]
    name = "lazyrss"
    version = "0.1.0"
    edition = "2021"

[dependencies]
    anyhow = "1"
    chrono = { version = "0.4", features = ["serde"] }
    crossterm = { version = "0.28", features = ["event-stream"] }
    dirs = "6"
    feed-rs = "2.3"
    futures = "0.3"
    html2text = "0.12"
    open = "5"
    ratatui = { version = "0.29", features = ["crossterm"] }
    reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
    rusqlite = { version = "0.32", features = ["bundled"] }
    serde = { version = "1", features = ["derive"] }
    serde_yaml = "0.9"
    tokio = { version = "1", features = ["full"] }
