[package]
    name = "lazyrss"
    version = "1.0.0"
    edition = "2024"
    include = [
        "src/**/*",
        "man/**/*",
        "Cargo.toml",
        "README.md",
        "LICENCE"
    ]
    description = "A Rust-based RSS TUI reader"
    repository = "https://github.com/sujaltv/lazyrss"
    readme = "README.md"
    license = "MIT"

[dependencies]
    anyhow = "1"
    chrono = { version = "0.4", features = ["serde"] }
    clap = { version = "4.5", features = ["derive"] }
    crossterm = { version = "0.28", features = ["event-stream"] }
    dirs = "6"
    feed-rs = "2.3"
    futures = "0.3"
    html2text = "0.12"
    open = "5"
    ratatui = { version = "0.29", features = ["crossterm"] }
    reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
    rusqlite = { version = "0.32", features = ["bundled"] }
    serde = { version = "1", features = ["derive"] }
    serde_yaml = "0.9"
    tokio = { version = "1", features = ["full"] }
